<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    
    <string name="app_name">WSDOT</string>
    <string name="no_list_data">Data could not be displayed</string>
	<string name="detail_empty">No details found</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="share_using">Share using</string>
    <string name="action_bar_share_with">Share with#8230;</string>
    
    <string name="btn_traffic">Traffic Map</string>
    <string name="btn_passes">Mountain Passes</string>
    <string name="btn_ferries">Ferries</string>
    <string name="btn_social">Social Media</string>
    <string name="btn_tolling">Toll Rates</string>
    <string name="btn_border">Border Wait</string>
    <string name="btn_amtrakcascades">Amtrak Cascades</string>
    
    <string name="title_borderwait">Border Wait</string>
    <string name="title_about">About</string>
    <string name="title_socialmedia">Social Media</string>
    <string name="title_flickr">Flickr</string>
    <string name="title_twitter">Twitter</string>
    <string name="title_facebook">Facebook</string>
    <string name="title_blog">Blogger</string>
    <string name="title_youtube">YouTube</string>
    <string name="title_cameravideo">Camera Video</string>
    <string name="title_ferries">Ferries</string>
    <string name="title_ferriesroutealerts">Route Alerts</string>
    <string name="title_ferriesrouteschedules">Route Schedules</string>
    <string name="title_vesselwatch">Vessel Watch</string>
    <string name="title_seattlealerts">Seattle Alerts</string>
    <string name="title_traveltimes">Travel Times</string>
    <string name="title_expresslanes">Express Lanes</string>
    <string name="title_trafficmap">Traffic Map</string>
    <string name="title_tollrates">Toll Rates</string>
    <string name="title_routealerts">Route Alerts</string>
    <string name="title_mountainpasses">Mountain Passes</string>
    <string name="title_mountainpassdetails">Mountain Pass Details</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_news">News</string>
    <string name="title_departing">Departing</string>
    <string name="title_arriving">Arriving</string>
    <string name="title_amtrakcascades">Amtrak Cascades</string>
    <string name="title_amtrakcascades_schedules">Find Schedules</string>
    <string name="title_amtrakcascades_train_schedules">Train Schedules</string>
    <string name="button_check_schedules">Check Schedules</string>
	
    <string name="description_refresh">Refresh</string>
    <string name="description_share">Share</string>
    <string name="description_about">About</string>
    <string name="description_preferences">Preferences</string>
    
    <string name="description_mylocation">My Location</string>
    <string name="description_cameras">Cameras</string>
    <string name="description_gotolocation">GoTo Location</string>
    <string name="description_travel_times">Travel Times</string>
    <string name="description_star">Star</string>
    <string name="description_alert">Alert</string>
    <string name="description_favorites">Favorites</string>
    <string name="description_report_image">Report Image</string>
    
    <string name="add_favorite">Added as favorite.</string>
    <string name="remove_favorite">Removed as favorite.</string>
    
    <string name="high_impact_alerts_inactive">No highest impact travel alerts</string>
    <string name="no_favorites">No favorites added yet.</string>
    <string name="no_connection">Can\'t load data. Check your connection.</string>
    <string name="no_matching_travel_times">No matching travel times.</string>
    <string name="no_day_departures">No departures available.</string>
    
    <string name="search_title">Search</string>
    <string name="search_hint">Search Travel Times</string>
    
    <string name="drive_up_spaces">Drive-up spaces</string>
    <string name="drive_up_spaces_disclaimer">Vehicles in line for tollbooth are not included in this estimate</string>
    
    <string name="google_static_map_key">INSERT_STATIC_MAP_API_KEY_HERE</string>
    <string name="google_youtube_key">AIzaSyA9X9T1layzh4KN_bdBomS9R-q7LTRWeYY</string>
    <string name="wsdot_api_access_code">INSERT_API_ACCESS_CODE_HERE</string>
    
    <string name="banner_ad_unit_id">/90447967/WSDOT:mobile-apps:multiple-sizes</string>

</resources>
