<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:wsdot="http://schemas.android.com/apk/res-auto">
      
	<item
	    android:id="@+id/my_location"
		android:title="@string/description_mylocation"
		android:icon="@drawable/ic_menu_mylocation"
		android:orderInCategory="1"
		wsdot:showAsAction="ifRoom|withText" />	

	<item
	    android:id="@+id/toggle_cameras"
		android:title="@string/description_cameras"
		android:icon="@drawable/ic_menu_camera"
		android:orderInCategory="2"
		wsdot:showAsAction="ifRoom|withText" />	

	<item
	    android:id="@+id/travel_times"
		android:title="@string/description_travel_times"
		android:icon="@drawable/ic_menu_travel_times"
		android:orderInCategory="3"
		wsdot:showAsAction="ifRoom|withText" />
			
	<item
	    android:id="@+id/goto_location"
		android:title="@string/description_gotolocation"
		android:icon="@drawable/ic_menu_goto"
		android:orderInCategory="4"
		wsdot:showAsAction="ifRoom|withText" >
		<menu>
			<item android:orderInCategory="1" android:title="Bellingham" android:id="@+id/goto_bellingham" />
			<item android:orderInCategory="2" android:title="Chehalis" android:id="@+id/goto_chehalis" />		
			<item android:orderInCategory="3" android:title="Hood Canal" android:id="@+id/goto_hoodcanal" />
			<item android:orderInCategory="4" android:title="Monroe" android:id="@+id/goto_monroe" />
			<item android:orderInCategory="5" android:title="Mount Vernon" android:id="@+id/goto_mtvernon" />
			<item android:orderInCategory="6" android:title="Olympia" android:id="@+id/goto_olympia" />
			<item android:orderInCategory="7" android:title="Seattle" android:id="@+id/goto_seattle" />
			<item android:orderInCategory="8" android:title="Snoqualmie Pass" android:id="@+id/goto_snoqualmiepass" />
			<item android:orderInCategory="9" android:title="Spokane" android:id="@+id/goto_spokane" />
			<item android:orderInCategory="10" android:title="Stanwood" android:id="@+id/goto_stanwood" />
			<item android:orderInCategory="11" android:title="Sultan" android:id="@+id/goto_sultan" />
			<item android:orderInCategory="12" android:title="Tacoma" android:id="@+id/goto_tacoma" />
			<item android:orderInCategory="13" android:title="Tri-Cities" android:id="@+id/goto_tricities" />
			<item android:orderInCategory="14" android:title="Vancouver" android:id="@+id/goto_vancouver" />
			<item android:orderInCategory="15" android:title="Wenatchee" android:id="@+id/goto_wenatchee" />
			<item android:orderInCategory="16" android:title="Yakima" android:id="@+id/goto_yakima" />
		</menu>
	</item>

</menu>